--- a/application/index/view/course/add.html
+++ b/application/index/view/course/add.html
@@ -164,7 +164,16 @@
                         </div>
                         <div class="hr-line-dashed"></div>
 
-
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">上下架:</label>
+                            <div class="col-sm-7">
+                                <label class="radio-inline">
+                                    <input type="radio" {eq name="info.is_shelves" value="0" }checked=""{/eq} value="0"  name="is_shelves">下架</label>
+                                <label class="radio-inline">
+                                    <input type="radio"  {eq name="info.is_shelves" value="1" }checked=""{/eq} value="1"  name="is_shelves">上架</label>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">课程亮点</label>
@@ -209,8 +218,8 @@
                 success: function(data){
                     if (data.code === 1) {
                         layer.msg(data.msg, {icon: 1, time: 1500});
-                        var index = parent.layer.getFrameIndex(window.name); //获取窗口索引  
-                        parent.layer.close(index); 
+                        var index = parent.layer.getFrameIndex(window.name); //获取窗口索引
+                        parent.layer.close(index);
                         window.location.href = '/index/course/index';
                     } else {
                         layer.msg(data.msg, {icon: 2, shift: 6});
