--- a/application/index/view/helps/contacthelp.html
+++ b/application/index/view/helps/contacthelp.html
@@ -24,12 +24,10 @@
     <link href="/static/hplus/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="/static/hplus/css/plugins/chosen/chosen.css" rel="stylesheet">
     <link href="/static/hplus/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
-
-
 </head>
 
 <body class="fixed-sidebar full-height-layout gray-bg">
- <div>
+
     <!--右侧部分开始-->
     <div id="page-wrapper" class="gray-bg dashbard-1" style="overflow: auto;">
         <div class="wrapper wrapper-content animated fadeInRight">
@@ -46,7 +44,7 @@
             </style>
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>金句管理</h5>
+                    <h5>{$current_menu.name|default=''}</h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -62,27 +60,20 @@
                             <div class="example-wrap">
                                 <div class="example">
                                     <div class="btn-group hidden-xs" id="bootstrapTableToolbar" role="group">
-                                        <button type="button" class="btn btn-danger" onclick="del()"> &nbsp;&nbsp;批量删除
-                                        </button>
                                         <button type="button" class="btn btn-outline btn-default" onclick="add()">
                                             <i class="fa fa-plus-square-o" aria-hidden="true">&nbsp;&nbsp;添加</i>
                                         </button>
                                     </div>
-
                                     <table id="bootstrapTable" data-click-to-select="true">
                                         <thead>
-                                            <tr>
-                                               <th data-checkbox="true"></th>
-                                                <th data-field="id" data-sortable="true" >序号</th>
-                                                <th data-field="imgurl"data-formatter="formatImg" >图片</th>
-                                                <th data-field="title" data-sortable="true" >标题</th>
-                                                <th data-field="content" data-sortable="true" >内容</th>
-                                                <th data-field="contribution_value" data-sortable="true" >贡献值</th>
-                                                <th data-field="type" data-sortable="true">类型</th>
-                                                <th data-field="is_shelves" data-formatter="is_shelves" data-sortable="true">上下架</th>
-                                                <th data-field="addtime" data-sortable="true"   data-formatter="formatTime">添加时间</th>
-                                                <th data-field="" data-formatter="formatOperation" >操作</th>
-                                            </tr>
+                                        <tr>
+                                           <th data-checkbox="true"></th>
+                                            <th data-field="id" data-sortable="true" class="col-sm-1">ID</th>
+                                            <th data-field="title">标题</th>
+                                            <th data-field="read_num">阅读量</th>
+                                            <th data-field="addtime" data-formatter="formatTime" align="center" data-sortable="true">添加时间</th>
+                                            <th data-field="" data-formatter="formatOperation" >操作</th>
+                                        </tr>
                                         </thead>
                                     </table>
                                 </div>
@@ -95,7 +86,6 @@
 
         </div>
 
-    </div>
     </div>
     <!--右侧部分结束-->
 <script src="/static/hplus/js/jquery.min.js?v=2.1.4"></script>
@@ -116,17 +106,14 @@
 
 <script src="/static/hplus/js/plugins/chosen/chosen.jquery.js"></script>
 <script src="/static/hplus/js/plugins/datapicker/bootstrap-datepicker.js"></script>
- <link href="/static/hplus/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
- <script src="/static/hplus/js/plugins/sweetalert/sweetalert.min.js"></script>
 
-
-
+    <link href="/static/hplus/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
+    <script src="/static/hplus/js/plugins/sweetalert/sweetalert.min.js"></script>
 <script>
 
     $(function () {
-
         $("#bootstrapTable").bootstrapTable({
-                url: "{:\\think\\Url::build('dayarticle/index')}",
+                url: "/index/Helps/contactHelps" ,
                 idField: 'id',
                 search: false,
                 cache: false,       //是否使用缓存
@@ -148,137 +135,45 @@
             });
     });
 
-    //格式化图片
-    function formatImg(value, row) {
-        var html = '<img src="' + value + '" style="height: 50px;">';
+    function detailFormat(index, row) {
+        var html = '';
+        html += '<div class="col-sm-12" style="text-align: left;"><div>内容:</div><div>'+row.content+'</div></div>';
         return html;
     }
 
-     function detailFormat(index, row) {
-        var html = '';
-        html += '<div class="col-sm-6">'+row.content+'</div>';
-        return html;
-     }
+    function formatAudio(vlaue) {
+        return '<audio src="'+ vlaue +'" controls="controls" style="width:250px;"></audio>';
+    }
 
-    function add1(){
+
+    function add(){
         parent.layer.open({
             type: 2,
             title: false,
             closeBtn: false,
             shade: [0],
             area: ['400px', '255px'],
-            offset: 't', //右下角弹出
-            time:1, //2秒后自动关闭
+            offset: 'rb', //右下角弹出
+            time: 50, //2秒后自动关闭
             shift: 2,
-            content: ["/index/dayarticle/add" , 'yes'], //iframe的url，no代表不显示滚动条
+            content: ["/index/Helps/add/type/3" , 'yes'], //iframe的url，no代表不显示滚动条
             end: function(){ //此处用于演示
                 parent.layer.open({
                     type: 2,
-                    title: '新增',
+                    title: '编辑',
                     shadeClose: true,
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['1150px', '650px'],
-                    content: "/index/dayarticle/add",
+                    content: "/index/Helps/add/type/3",
                     end:function() {
                         location.reload();
                     }
                 });
-
             }
         });
     }
-    function is_shelves(value, row, index) {
-        var html = '';
-        html += '<div class="switch">';
-        html += '<div class="onoffswitch">';
-        if (value == 1) {
-            html += '<input type="checkbox" checked onchange="is_true(3, this)" data-id="' + row.id + '" class="onoffswitch-checkbox" id="shelves' + row.id + '">';
-        } else {
-            html += '<input type="checkbox" onchange="is_true(3, this)" data-id="' + row.id + '" class="onoffswitch-checkbox" id="shelves' + row.id + '">';
-        }
-        html += '<label class="onoffswitch-label" for="shelves' + row.id + '">';
-        html += '<span class="onoffswitch-inner"></span><span class="onoffswitch-switch"></span>';
-        html += '</label></div></div>';
-        return html;
-    }
-    function is_true(name, target) {
-        var id = $(target).attr('data-id');
-        var value = $(target).is(':checked');
-        if(name == 1) {
-            var msg = '为推荐'
-        }else if(name == 2){
-            var msg = "每日一课"
-        }else {
-            var msg = "上下架"
-        }
-        if(value == true) {
-            value = 1;
-            var status = '设置'
-        }else{
-            value = 0;
-            var status = '取消'
-        }
-        console.log(name);
-        swal({
-            title:"您确定要" + status + msg + "?",
-            text:"请谨慎操作！",
-            type:"warning",
-            showCancelButton:true,
-            confirmButtonColor:"#DD6B55",
-            confirmButtonText:"是的，我要" + status + "！",
-            cancelButtonText:"让我再考虑一下…",
-            closeOnConfirm:false,closeOnCancel:false
-        },function(isConfirm){
-            if(isConfirm){
-                $.ajax({
-                    url: "{:\\think\\Url::build('Dayarticle/setTrue')}",
-                    data: {id: id, type: name,value:value},
-                    dataType: "json",
-                    type: "post",
-                    success: function (data) {
-                        if (data.code === 1) {
-                            swal("操作成功", data.msg, "success");
-                            $("#bootstrapTable").bootstrapTable('refresh');
-                        } else {
-                            swal(data.msg,"错误","error")
-                        }
-                    }
-                });
-            }else{
-                swal("已取消","您取消了" + status + msg + "操作！","error")
-            }
-        })
-    }
-     function add(){
-        layer.open({
-          type: 2,
-          title: false,
-          closeBtn: 0, //不显示关闭按钮
-          shade: [0],
-          area: ['340px', '215px'],
-          offset: 'rb', //右下角弹出
-          time: 2, //2秒后自动关闭
-          anim: 2,
-          content: ["/index/dayarticle/add" , 'no'], //iframe的url，no代表不显示滚动条
-          end: function(){ //此处用于演示
-            layer.open({
-              type: 2,
-              title: '很多时候，我们想最大化看，比如像这个页面。',
-              shadeClose: true,
-              shade: false,
-              maxmin: true, //开启最大化最小化按钮
-              area: ['893px', '600px'],
-              content: '/index/dayarticle/add',
-                end:function() {
-                    location.reload();
-                }
-            });
-          }
-        });
-    }
 
-     //修改老师
     function  edit(id){
         parent.layer.open({
             type: 2,
@@ -289,7 +184,7 @@
             offset: 'rb', //右下角弹出
             time: 50, //2秒后自动关闭
             shift: 2,
-            content: ["/index/dayarticle/edit/id/" + id, 'yes'], //iframe的url，no代表不显示滚动条
+            content: ["/index/Helps/edit/id/" + id , 'yes'], //iframe的url，no代表不显示滚动条
             end: function(){ //此处用于演示
                 parent.layer.open({
                     type: 2,
@@ -298,7 +193,7 @@
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['1150px', '650px'],
-                    content: "/index/dayarticle/edit/id/" + id,
+                    content: "/index/Helps/edit/id/" + id,
                     end:function() {
                         location.reload();
                     }
@@ -307,24 +202,18 @@
         });
     }
 
-    function aaa(){
-        var aaa = $("#bootstrapTable")
-        console.log(aaa)
-        //.bootstrapTable('refresh')
-    }
-
     //格式化操作
     function formatOperation(value, row) {
-        var html = '<div class="btn-group">';
-        html +=	'<button class="btn btn-info" type="button" onclick="edit(' + row.id + ')" data-target="#myModal"><i class="fa fa-paste"></i>&nbsp;编&nbsp;辑</button>';
-        html += '<button type="button" class="btn btn-warning" onclick="delThis(' + row.id + ')"><i class="fa fa-warning" aria-hidden="true"></i>  删除</button>';
+        var html = '';
+        html += '<div class="btn-group">';
+        html +=	'<button class="btn btn-success" type="button" onclick="edit(' + row.id + ')" data-target="#myModal">编辑</button>';
+        html +=	'<button class="btn btn-danger" type="button" onclick="del(' + row.id + ')" data-target="#myModal">删除</button>';
         html +=	'</div>';
         return html;
     }
 
 
-
-    function delThis(id) {
+    function del(id){
         swal({
             title:"您确定要删除这条信息吗",
             text:"删除后将无法恢复，请谨慎操作！",
@@ -337,15 +226,17 @@
         },function(isConfirm){
             if(isConfirm){
                 $.ajax({
-                    url: "{:\\think\\Url::build('dayarticle/del')}",
+                    url: "{:\\think\\Url::build('Helps/del')}",
                     data: {id: id},
                     dataType: "json",
+                    type: "post",
                     success: function(data) {
                         if (data.code === 1) {
                             swal(data.msg, "您已经永久删除了这条信息。", "success");
                             $("#bootstrapTable").bootstrapTable('refresh');
                         } else {
                             swal("错误",data.msg,"error")
+                            layer.msg(data.msg, {icon: 2});
                         }
                     },
                     error: function(e) {
@@ -357,51 +248,6 @@
             }
         })
     }
-
-    function del() {
-        var rows = $("#bootstrapTable").bootstrapTable('getAllSelections');
-        if (rows.length < 1) {
-            layer.msg('请至少选择一项！', {icon: 2, shift: 6});
-            return;
-        }
-        swal({
-            title:"您确定要删除选中的文章吗",
-            text:"删除后将无法恢复，请谨慎操作！",
-            type:"warning",
-            showCancelButton:true,
-            confirmButtonColor:"#DD6B55",
-            confirmButtonText:"是的，我要删除！",
-            cancelButtonText:"让我再考虑一下…",
-            closeOnConfirm:false,closeOnCancel:false
-        },function(isConfirm){
-            if(isConfirm){
-                var ids = [];
-                for (var i = 0; i < rows.length; i++) {
-                    ids[i] = rows[i].id;
-                }
-                $.ajax({
-                    url: "{:\\think\\Url::build('dayarticle/piDel')}",
-                    data: {ids: ids},
-                    dataType: "json",
-                    success: function(data) {
-                        if (data.code === 1) {
-                            swal(data.msg, "您已经永久删除了这些文章。", "success");
-                            $("#bootstrapTable").bootstrapTable('refresh');
-                        } else {
-                            swal("错误",data.msg,"error")
-                        }
-                    },
-                    error: function(e) {
-                        swal("操作错误","服务器错误，请重试！","error")
-                    }
-                });
-            }else{
-                swal("已取消","您取消了删除操作！","error")
-            }
-        })
-    }
-
-
 </script>
 
 </body>
