--- a/application/index/view/datacensus/index.html
+++ b/application/index/view/datacensus/index.html
@@ -153,7 +153,7 @@
             <div class="ibox">
                 <div class="ibox-content">
                     <h5>本周产出学分</h5>
-                    <h2 class="credit_today"></h2>
+                    <h2 class="credit_weeks"></h2>
                     <div id="sparkline8"></div>
                 </div>
             </div>
@@ -523,6 +523,8 @@
                     var advanced_count = data.order.advanced_count;  // 新增人数
                     var advanced_sum_score = data.order.advanced_sum_score;  // 新增人数
                     var advanced_sum_value = data.order.advanced_sum_value;  // 新增人数
+
+
                     var user_today_new = data.daydata.user_today_new;//1今日注册用户
                     var face_today_user = data.daydata.face_today_user;//2今日认证用户
 
