--- a/application/index/view/peters/petersset.html
+++ b/application/index/view/peters/petersset.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <title>{$current_menu.name|default=''}</title>
+    <title>老师列表</title>
 
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -44,7 +44,7 @@
             </style>
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>{$current_menu.name|default=''}</h5>
+                    <h5>堂主申请列表</h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
@@ -67,21 +67,14 @@
                                     <table id="bootstrapTable" data-click-to-select="true">
                                         <thead>
                                         <tr>
-                                           <th data-checkbox="true" class="col-sm-1"></th>
+                                           <th data-checkbox="true"></th>
                                             <th data-field="id" data-sortable="true" class="col-sm-1">ID</th>
-                                            <th data-field="name" data-sortable="true"  class="col-sm-1" >进阶名称</th>
-                                            <th data-field="open_tj" data-sortable="true"  class="col-sm-1" >开放条件</th>
-                                            <th data-field="studying_num" data-sortable="true"  class="col-sm-1" >同时在学课程数</th>
-                                            <th data-field="value" data-sortable="true"  class="col-sm-1" >兑换所需学分/金额</th>
-                                            <th data-field="pay_type" data-sortable="true">购买方式</th>
-                                            <th data-field="chapter_count" data-sortable="true"  class="col-sm-1" >课时数量</th>
-                                            <th data-field="learn_power" data-sortable="true"  class="col-sm-1" >学习力</th>
-                                            <th data-field="difficulty" data-sortable="true"  class="col-sm-1" >难度系数</th>
-                                            <th data-field="reward" data-sortable="true"  class="col-sm-1" >学分奖励</th>
-                                            <th data-field="deadline" data-sortable="true"  class="col-sm-1" >有效天数</th>
-                                            <th data-field="sort" data-sortable="true"  class="col-sm-1" >排序</th>
-                                            <th data-field="addtime" data-formatter="formatTime" align="center" data-sortable="true" class="col-sm-1">添加时间</th>
-                                            <th data-field="" data-formatter="formatOperation" class="col-sm-3">操作</th>
+                                            <th data-field="name" data-sortable="true"  >名称</th>
+                                            <th data-field="type" data-formatter="true"  >状态</th>
+                                            <th data-field="is_open" data-formatter="formatOpen" >是否开启</th>
+                                            <th data-field="content" data-sortable="true"  >条件</th>
+                                            <th data-field="addtime" data-formatter="formatTime" align="center" data-sortable="true">添加时间</th>
+                                            <th data-field="" data-formatter="formatOperation" >操作</th>
                                         </tr>
                                         </thead>
                                     </table>
@@ -115,40 +108,44 @@
 
 <script src="/static/hplus/js/plugins/chosen/chosen.jquery.js"></script>
 <script src="/static/hplus/js/plugins/datapicker/bootstrap-datepicker.js"></script>
-
-<link type="text/css" rel="stylesheet" href="__STATIC__/custom-popup/custom.popup-v1.2.css">
-<script src="__STATIC__/custom-popup/jquery.custom.popup-v1.2.js"></script>
-
+<!-- 弹窗-->
 <link href="/static/hplus/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
 <script src="/static/hplus/js/plugins/sweetalert/sweetalert.min.js"></script>
-
 <script>
 
     $(function () {
-
         $("#bootstrapTable").bootstrapTable({
-                url: "{:\\think\\Url::build('advanced/index')}",
-                idField: 'id',
-                search: false,
-                cache: false,       //是否使用缓存
-                sortStable: true,
-                sortOrder: 'desc',
-                striped: true,      //是否显示行间隔色
-                pagination: true,
-                sidePagination: 'server',
-                pageNumber: 1,
-                pageSize: 10,
-                pageList: '[10, 30, 100]',
-                showRefresh: true,
-                showToggle: false,
-                showColumns: true,
-                iconSize: "outline",
-                toolbar: "#bootstrapTableToolbar"
-            });
+            url: "{:\\think\\Url::build('peters/petersset')}",
+            idField: 'id',
+            search: false,
+            cache: false,       //是否使用缓存
+            sortOrder: 'desc',
+            striped: true,      //是否显示行间隔色
+            detailView: false,       //开启详细视图功能
+            pagination: true,
+            sidePagination: 'server',
+            pageNumber: 1,
+            pageSize: 10,
+            pageList: '[5, 10, 15]',
+            showRefresh: false,
+            showToggle: false,
+            showColumns: true,
+            iconSize: "outline",
+            toolbar: "#bootstrapTableToolbar",
+        });
     });
 
 
-    //添加老师
+    function formatMax(value) {
+        if(value == '' || value == '0.0') {
+            return '无上限'
+        }else{
+            return value;
+        }
+    }
+
+
+    //
     function add(){
         parent.layer.open({
             type: 2,
@@ -159,7 +156,7 @@
             offset: 'rb', //右下角弹出
             time: 50, //2秒后自动关闭
             shift: 2,
-            content: ['/index/advanced/add', 'yes'], //iframe的url，no代表不显示滚动条
+            content: ['/index/Peters/setadd', 'yes'], //iframe的url，no代表不显示滚动条
             end: function(){ //此处用于演示
                 parent.layer.open({
                     type: 2,
@@ -168,7 +165,7 @@
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['1150px', '650px'],
-                    content: '/index/advanced/add',
+                    content: '/index/Peters/setadd',
                     end:function() {
                         location.reload();
                     }
@@ -177,7 +174,6 @@
         });
     }
 
-    //修改老师
     function  edit(id){
         parent.layer.open({
             type: 2,
@@ -188,7 +184,7 @@
             offset: 'rb', //右下角弹出
             time: 50, //2秒后自动关闭
             shift: 2,
-            content: ["/index/advanced/edit/id/" + id, 'yes'], //iframe的url，no代表不显示滚动条
+            content: ["/index/Peters/setedit/id/" + id, 'yes'], //iframe的url，no代表不显示滚动条
             end: function(){ //此处用于演示
                 parent.layer.open({
                     type: 2,
@@ -197,7 +193,7 @@
                     shade: false,
                     maxmin: true, //开启最大化最小化按钮
                     area: ['1150px', '650px'],
-                    content: "/index/advanced/edit/id/" + id,
+                    content: "/index/Peters/setedit/id/" + id,
                     end:function() {
                         location.reload();
                     }
@@ -211,19 +207,52 @@
     function formatOperation(value, row) {
         var html = '';
         html += '<div class="btn-group">';
-        html +=	'<button class="btn btn-info" type="button" onclick="edit(' + row.id + ')" data-target="#myModal"><i class="fa fa-paste"></i>编辑</button>';
-        html +=	'<button class="btn btn-warning" type="button" onclick="del(' + row.id + ')" data-target="#myModal">删除</button>';
-        html +=	'<button class="btn btn-primary" type="button" onclick="courselist(' + row.id + ')" data-target="#myModal">课程管理</button>';
+        html +=	'<button class="btn btn-success" type="button" onclick="edit(' + row.id + ')" data-target="#myModal">编&nbsp;&nbsp;&nbsp;辑</button>';
+        html +=	'<button class="btn btn-danger" type="button" onclick="del(' + row.id + ')" data-target="#myModal">删&nbsp;&nbsp;&nbsp;除</button>';
+        if(row.is_open == 0) {
+            html += '<button type="button" class="btn btn-success" onclick="openPeters(' + row.id + ',1)">开启</button>';
+        }else{
+            html += '<button type="button" class="btn btn-success" onclick="openPeters(' + row.id + ',0)">关闭</button>';
+        }
         html +=	'</div>';
         return html;
     }
-
-    function courselist(id) {
-            window.location.href ="/index/Xcscourse/advanced_index/advanced_id/" + id;
+    function formatOpen(value) {
+        if(value == 0) {
+            return '未开启';
+        }else{
+            return '已开启'
+        }
     }
-
-
-    //单个删除进阶
+    function openPeters(id,is_open) {
+        var msg = '';
+        if(is_open == 0) {
+            msg = '关闭';
+        }else{
+            msg = '开启';
+        }
+        layer.confirm('确定要开' + msg +'选中的项吗？', {
+            icon: 3
+        }, function(){
+            $.ajax({
+                url: "{:\\think\\Url::build('Peters/openPeters')}",
+                data: {id: id,is_open:is_open},
+                dataType: "json",
+                type: "post",
+                success: function(data) {
+                    if (data.code === 1) {
+                        layer.msg(data.msg, {icon: 1, time: 1500});
+                        $("#bootstrapTable").bootstrapTable('refresh');
+                    } else {
+                        layer.msg(data.msg, {icon: 2});
+                    }
+                },
+                error: function(e) {
+                    layer.msg('服务器错误，请重试', {icon: 2});
+                }
+            });
+        });
+    }
     function del(id){
         swal({
             title:"您确定要删除这条信息吗",
@@ -237,7 +266,7 @@
         },function(isConfirm){
             if(isConfirm){
                 $.ajax({
-                    url: "{:\\think\\Url::build('advanced/del')}",
+                    url: "{:\\think\\Url::build('Peters/setdel')}",
                     data: {id: id},
                     dataType: "json",
                     type: "post",
